Version 2.0.10 automatically generated from ld-openapi@bcf6fb9.
